--- a/takeoff.html
+++ b/takeoff.html
@@ -6,7 +6,8 @@
 	<title>my product</title>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <!-- BootStrap -->
+    <script src="script/takeoff.js"></script>
+	<!-- BootStrap -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -112,25 +113,11 @@
                             <td>Ex. 商品1</td>
                             <td>Ex. 上架中</td>
                             <td>Ex. $150</td>
-                            <td style="width: 10%; text-align: center;"><input type="checkbox" value="productTakeoff" /></td>
-                        </tr>
-                        <tr>
-                            <td>Ex. 11-24-2022</td>
-                            <td>Ex. 商品2</td>
-                            <td>Ex. 上架中</td>
-                            <td>Ex. $250</td>
-                            <td style="width: 10%; text-align: center;"><input type="checkbox" value="productTakeoff" /></td>
-                        </tr>
-                        <tr>
-                            <td>Ex. 11-24-2022</td>
-                            <td>Ex. 商品3</td>
-                            <td>Ex. 上架中</td>
-                            <td>Ex. $300</td>
-                            <td style="width: 10%; text-align: center;"><input type="checkbox" value="productTakeoff" /></td>
+                            <td style="width: 10%; text-align: center;"><input type="radio" name="cancel" value="" /></td>
                         </tr>
                     </table>
                     
-                    <div style="padding-top: 50px; padding-left: 10px; margin: auto; width: 10%;"><button type="button" value="confirmTakeOff" style="font-size: 20px;">更新資訊</button></div>
+                    <div style="padding-top: 50px; padding-left: 10px; margin: auto; width: 10%;"><button onclick="reload()" id="update" type="button" value="confirmTakeOff" style="font-size: 20px;">更新資訊</button></div>
                 </div>              
              </div>
              <!-- /#page-content-wrapper -->
