--- a/shipment.html
+++ b/shipment.html
@@ -69,7 +69,7 @@
 								<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
 								<li><a href="upload.html" id="check_in_out_2">上架商品</a></li>
 								<li><a href="takeoff.html" id="check_in_out_3">我的商品</a></li>
-								<li><a href="#" id="check_in_out_4">個人資料</a></li>
+								<li><a href="memberInfo.html" id="check_in_out_4">個人資料</a></li>
                                 <li><a href="chatroom.html" id="check_in_out_5">聊天室</a></li>
 							</ul>
 						</li>
@@ -119,7 +119,7 @@
                             <li><a href="shipment.html" id="check_in_out_1" style="color:rgb(1, 6, 101);">訂單查詢</a></li>
                             <li><a href="upload.html" id="check_in_out_2">上架商品</a></li>
                             <li><a href="takeoff.html" id="check_in_out_3">我的商品</a></li>
-                            <li><a href="#" id="check_in_out_4">個人資料</a></li>
+                            <li><a href="memberInfo.html" id="check_in_out_4">個人資料</a></li>
                             <li><a href="chatroom.html" id="check_in_out_5">聊天室</a></li>
 						</ul>
 					</div>
