--- a/chatroom.html
+++ b/chatroom.html
@@ -1,48 +1,44 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<meta charset="utf-8">
+		<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>chatroom</title>
-	 <!-- jquery -->
-	 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-	 <!-- BootStrap -->
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
- 
-	 <meta charset="utf-8">
-	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	 <meta name="viewport" content="width=device-width, initial-scale=1">
-	 <meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	 <meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	 <meta name="author" content="gettemplates.co" />
-	 
-	 <!-- Animate.css -->
-	 <link rel="stylesheet" href="css/animate.css">
-	 <!-- Icomoon Icon Fonts-->
-	 <link rel="stylesheet" href="css/icomoon.css">
-	 <!-- Bootstrap  -->
-	 <link rel="stylesheet" href="css/bootstrap.css">
- 
-	 <!-- Flexslider  -->
-	 <link rel="stylesheet" href="css/flexslider.css">
- 
-	 <!-- Owl Carousel  -->
-	 <link rel="stylesheet" href="css/owl.carousel.min.css">
-	 <link rel="stylesheet" href="css/owl.theme.default.min.css">
- 
-	 <!-- Theme style  -->
-	 <link rel="stylesheet" href="css/style.css">
- 
-	 <!-- Modernizr JS -->
-	 <script src="js/modernizr-2.6.2.min.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Shop</title>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <!-- BootStrap 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">-->
+
+	
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="css/animate.css">
+	<!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="css/icomoon.css">
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+
+	<!-- Flexslider  -->
+	<link rel="stylesheet" href="css/flexslider.css">
+
+	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+	<!-- Theme style  -->
+	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Modernizr JS -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	
+	<link rel="stylesheet" href="css/login.css">
 	 <script src="script/index.js"></script>
 
 	</head>
 	<body>
 		
-
+	<div id="page">
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="row">
@@ -104,7 +100,7 @@
 			</div>
 		</div>
 	</header>
-
+	</div>
 	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
