--- a/takeoff.html
+++ b/takeoff.html
@@ -1,22 +1,16 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>my product</title>
-    <!-- jquery -->
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-	<!-- BootStrap -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-
-	<meta charset="utf-8">
+		<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="gettemplates.co" />
+	<title>Shop</title>
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <!-- BootStrap 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">-->
+
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -37,16 +31,20 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<script src="script/index.js"></script>
-	<script src="script/takeoff.js"></script>
+	
+	<link rel="stylesheet" href="css/login.css">
 
-	<link rel="stylesheet" href="css/upload.css">
-    <link rel="stylesheet" href="css/takeoff.css">
+		<script src="script/index.js"></script>   
+		<script src="script/takeoff.js"></script>
 
+
+		<link rel="stylesheet" href="css/upload.css">
+		<link rel="stylesheet" href="css/takeoff.css">	
 
 	</head>
 	<body>
-			
+		<div id="page">
+
 
 		<nav class="fh5co-nav" role="navigation">
 			<div class="container">
@@ -111,7 +109,7 @@
 		<div id="fh5co-contact">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5 animate-box" style="width:fit-content;">
+					<div class="col-md-3 animate-box" >
 						<div class="fh5co-contact-info">
 							<h3 style="border-bottom: 1px solid rgba(1, 6, 101, 0.378);">Member Centre</h3>
 							<ul>
@@ -125,7 +123,7 @@
 						</div>
 					</div>
 	
-					<div class="col-md-9 animate-box" style="padding-left: 80px">
+					<div class="col-md-9 animate-box" >
 						<h2 id="title"> 我的商品</h2>
 						<table id ="takeoff" class="center">
 							<tr>
@@ -150,6 +148,7 @@
 				</div>
 				
 			</div>
+		</div>
 		</div>
 
             
