--- a/3C.html
+++ b/3C.html
@@ -58,7 +58,7 @@
 						<li><a href="">Sale</a></li> 
 
                         <li class="has-dropdown">
-							<a href="" id="logoName"></a>
+							<a href="" id="logoName">Member</a>
 							<ul class="dropdown">
                                 <li><a href="login.html" id="in_out">Sign in/out</a></li>
 								<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
