--- a/chatroom.html
+++ b/chatroom.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Shop</title>
+	<title>chatroom</title>
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <!-- BootStrap 
@@ -54,7 +54,7 @@
 						<li><a href="">Sale</a></li> 
 
 						<li class="has-dropdown">
-							<a href="" id="logoName"></a>
+							<a href="" id="logoName">Member</a>
 							<ul class="dropdown">
 								<li><a href="login.html" id="in_out">Sign in/out</a></li>
 								<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
@@ -77,7 +77,7 @@
 								</span>
 							</div>
 						</li>
-						<li class="shopping-cart"><a href="#" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
+						<li class="shopping-cart"><a href="shoppingcart.html" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
 					</ul>
 				</div>
 			</div>
