--- a/takeorder_1.html
+++ b/takeorder_1.html
@@ -64,7 +64,7 @@
 						<li><a href="">Sale</a></li> 
 
                         <li class="has-dropdown">
-							<a href="" id="logoName"></a>
+							<a href="" id="logoName">Member</a>
 							<ul class="dropdown">
                                 <li><a href="login.html" id="in_out">Sign in/out</a></li>
 								<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
@@ -87,7 +87,7 @@
 						      </span>
 						    </div>
 						</li>
-						<li class="shopping-cart"><a href="#" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
+						<li class="shopping-cart"><a href="shoppingcart.html" class="cart"><span><small>0</small><i class="icon-shopping-cart"></i></span></a></li>
 					</ul>
 				</div>
 			</div>
