--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 			<div align="right" style="margin: 10px;">
 				商品排序：
 				<select name="display_order" id="display_order">
-					<option value="upload_1" selected>上架新->舊</option>
-					<option value="upload_2" >上架舊->新</option>
-					<option value="price_1">價錢小->大</option>
-					<option value="price_2">價錢大->小</option>
+					<option value="product_postdate-DESC" selected>上架新->舊</option>
+					<option value="product_postdate-ASC" >上架舊->新</option>
+					<option value="product_cost-ASC">價錢小->大</option>
+					<option value="product_cost-DESC">價錢大->小</option>
 				</select>
 			</div>
 			<div id="display">
