--- a/fixed_page.html
+++ b/fixed_page.html
@@ -33,8 +33,9 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	
 	<link rel="stylesheet" href="css/login.css">
-            <script src="script/index.js"></script>
-            <script src="script/showProductDetail.js"></script>
+    <script src="script/index.js"></script>
+    <script src="script/showProductDetail.js"></script>
+    <script src="script/recoed.js"></script>
 
 	</head>
 	<body>
@@ -226,6 +227,30 @@
             
 			<div class="row">
 
+			</div>
+		</div>
+	</div>
+    <div id="fh5co-started">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: 0;">
+					<h2>record</h2>
+					<p>曾經瀏覽ののの商品</p>
+				</div>
+			</div>
+			<div class="row animate-box" >
+				<div class="col-md-8 col-md-offset-2" id="record_product">
+					<!--<div class="col-md-4 text-center animate-box">
+						<div class="product">
+							<div class="product-grid-recode" style="background-image:url(images/sea.jpg);">
+							</div>
+							<div class="desc">
+								<h3><a id="view" href="single.html" >資工系大一用書-計算機概論2020</a></h3>
+								<span class="price">$350</span>
+							</div>
+						</div>
+					</div>-->
+				</div>
 			</div>
 		</div>
 	</div>
