--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
 			<div class="row" id="showProduct">
 				<!--<div class="col-md-4 text-center animate-box">
 					<div class="product">
-						<div class="product-grid" style="background-image:url(images/product-1.jpg);">
+						<div class="product-grid" style="background-image:url(images/sea.jpg);">
 							<div class="inner">
 								<p>
-									<a href="single.html" class="icon"><i class="icon-shopping-cart"></i></a>
-									<a href="single.html" class="icon"><i class="icon-eye"></i></a>
+									<a id="view" href="single.html" target="_blank" class="icon"><i class="icon-shopping-cart"></i></a>
+									<a id="view" href="single.html" target="_blank" class="icon"><i class="icon-eye"></i></a>
 								</p>
 							</div>
 						</div>
 						<div class="desc">
-							<h3><a href="single.html">資工系大一用書-計算機概論2020</a></h3>
+							<h3><a id="view" href="single.html" >資工系大一用書-計算機概論2020</a></h3>
 							<span class="price">$350</span>
 						</div>
 					</div>
@@ -149,25 +149,23 @@
 	<div id="fh5co-started">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading" style="margin-bottom: 0;">
 					<h2>record</h2>
 					<p>曾經瀏覽ののの商品</p>
 				</div>
 			</div>
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2">
-					
-					<!--<form class="form-inline">
-						<div class="col-md-6 col-sm-6">
-							<div class="form-group">
-								<label for="email" class="sr-only">Email</label>
-								<input type="email" class="form-control" id="email" placeholder="Email">
+			<div class="row animate-box" >
+				<div class="col-md-8 col-md-offset-2" id="record_product">
+					<!--<div class="col-md-4 text-center animate-box">
+						<div class="product">
+							<div class="product-grid-recode" style="background-image:url(images/sea.jpg);">
+							</div>
+							<div class="desc">
+								<h3><a id="view" href="single.html" >資工系大一用書-計算機概論2020</a></h3>
+								<span class="price">$350</span>
 							</div>
 						</div>
-						<div class="col-md-6 col-sm-6">
-							<button type="submit" class="btn btn-default btn-block">Subscribe</button>
-						</div>
-					</form>-->
+					</div>-->
 				</div>
 			</div>
 		</div>
