--- a/chat_page.html
+++ b/chat_page.html
@@ -33,10 +33,9 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	
 	<link rel="stylesheet" href="css/login.css">
-	<link rel="stylesheet" href="css/takeoff.css">	
 	<link rel="stylesheet" href="css/chat.css">	
 	<script src="script/index.js"></script>
-	<script src="script/chat.js"></script>
+	<script src="script/chat_page.js"></script>
 
 	</head>
 	<body>
@@ -87,70 +86,57 @@
 		</div>
 	</nav>
 	<div id="page">
-	<header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner" style="background-image:url(images/sea.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Chatroom</h1>
-							<h2>National Taiwan Ocean University</h2>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
 	<div id="fh5co-contact">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 animate-box" >
 					<div class="fh5co-contact-info">
-						<h3 style="border-bottom: 1px solid rgba(1, 6, 101, 0.378);">Member Centre</h3>
+						<h3 style="border-bottom: 1px solid rgba(1, 6, 101, 0.378);">聊天紀錄</h3>
 						<ul>
-							<li><a href="login.html" id="in_out">Sign in/out</a></li>
-							<li><a href="shipment.html" id="check_in_out_1">訂單查詢</a></li>
-							<li><a href="upload.html" id="check_in_out_2" >上架商品</a></li>
-							<li><a href="takeoff.html" id="check_in_out_3" style="color:rgb(1, 6, 101);">我的商品</a></li>
-							<li><a href="memberInfo.html" id="check_in_out_4">個人資料</a></li>
-							<li><a href="chatroom.html" id="check_in_out_5">聊天室</a></li>
-						</ul>
+							<li ><a href="chat_page.html?1" class="no_read chat" id="1">ex: 王小明</a></li>
+							<li><a href="chat_page.html?2" class="no_read chat" id="2">ex: 王小明</a></li>
+							<li><a href="chat_page.html?3" class="already_read chat" id="3">ex: 王小明</a></li>
+                        </ul>
 					</div>
 				</div>
 
 				<div class="col-md-9 animate-box" >
-					<h2 id="title">聊天室</h2>
-					<table id ="chat_box" class="center">
-						<tr>
-							<th></th>
-							<th>來自</th>
-							<th>訊息</th>
-							<th>時間</th>
-						</tr>
-						<tr class="no_read chat 01" id="1">
-						   	<td style="width: 10%; text-align: center;"><input type="checkbox" name="check" value="" /></td>
-							<td>Ex. 王小明</td>
-							<td>Ex. 尼好鴨鴨鴨鴨鴨</td>
-							<td>Ex. 2022-12-15</td>
-						</tr>
-						<tr class="no_read chat" id="2">
-							<td style="width: 10%; text-align: center;"><input type="checkbox" name="check" value="" /></td>
-						 	<td>Ex. 王小明</td>
-							<td>Ex. 尼好鴨鴨鴨鴨鴨</td>
-						 	<td>Ex. 2022-12-15</td>
-					 	</tr>
-						<tr class="already_read chat" id="3">
-							<td style="width: 10%; text-align: center;"><input type="checkbox" name="check" value="" /></td>
-						 	<td>Ex. 王小明</td>
-							<td>Ex. 尼好鴨鴨鴨鴨鴨</td>
-						 	<td>Ex. 2022-12-15</td>
-					 	</tr>	
-					</table>
-					<div class="form-group" style="margin-top: 15px; text-align: right;">
+					<h2 id="title">Chat Messages</h2>
+                    
+                    <div style="overflow:scroll; height: 70vh;">
 
-						<button onclick="" id="" value="" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">刪除訊息</button>
-					</div>
+                        <div class="message">
+                            <h4>王小明:</h4>
+                            <p>倪好!請問有這本書嗎</p>
+                            <span class="time-right">11:00</span>
+                        </div>
+
+                        <div class="message darker">
+                            <h4>我:</h4>
+                            <p>有得!要250元</p>
+                            <span class="time-left">11:01</span>
+                        </div>
+
+                        <div class="message">
+                            <h4>王小明:</h4>
+                            <p>QQ太貴了八</p>
+                            <span class="time-right">11:02</span>
+                        </div>
+
+                        <div class="message darker">
+                            <h4>我:</h4>
+                            <p>沒錢就不要買鴨</p>
+                            <span class="time-left">11:05</span>
+                        </div>    
+
+                    </div>
+                    <div style="margin-top: 10px; text-align: center;">
+                        <span>輸入訊息：</span>
+                        <input type="text" style="width: calc(100%/2);">
+                        <button onclick="" id="" value="" class="btn" style="background-color: rgb(233, 242, 250); color:#000A6B;">傳送</button>
+
+                    </div>
+
 			</div>
 			
 		</div>
